# casper

./: .env.example  .gitignore  AGENT-BACKENDS-v1.md  API-v1.md  ARCHITECTURE.md  BUILD_STATUS.md  CASPER-SPEC-v1.md  CLAUDE.md  Cargo.toml  DATAMODEL-v1.md  Dockerfile  Dockerfile.agent-backend  MILESTONES-v1.md  README.md  Review-report.md  SETUP.md  docker-compose.test.yml  docker-compose.yml  sidecar-test.yaml
.claude/agents/: api-security-audit.md  architect-review.md  backend-architect.md  code-reviewer.md  command-expert.md  database-optimizer.md  debugger.md  error-detective.md  javascript-developer.md  performance-engineer.md  project-supervisor-orchestrator.md  react-performance-optimization.md  review-agent.md  rust-expert.md  security-auditor.md  sql-expert.md  technical-researcher.md  test-automator.md  typescript-expert.md  ui-ux-designer.md
.github/workflows/: ci.yml  deploy.yml
casper-agent-backend/: Cargo.toml
casper-agent-backend/src/: main.rs  ws.rs
casper-cli/: Cargo.toml
casper-cli/src/: credentials.rs  http.rs  main.rs
casper-cli/src/commands/: agent.rs  audit.rs  auth.rs  conversations.rs  deploy.rs  keys.rs  knowledge.rs  memory.rs  mod.rs  run.rs  secrets.rs  snippets.rs  usage.rs
casper-server/: Cargo.toml
casper-server/src/: auth.rs  config.rs  helpers.rs  main.rs  pagination.rs
casper-server/src/routes/: agent_backend_routes.rs  agent_routes.rs  apikey_routes.rs  auth_routes.rs  backend_routes.rs  catalog_routes.rs  connection_routes.rs  conversation_routes.rs  deployment_routes.rs  domain_routes.rs  feedback_routes.rs  inference_routes.rs  knowledge_routes.rs  mcp_connection_routes.rs  memory_routes.rs  mod.rs  model_routes.rs  oauth_provider_routes.rs  quota_routes.rs  run_routes.rs  secret_routes.rs  snippet_routes.rs  sso_routes.rs  tenant_routes.rs  training_routes.rs  user_routes.rs
casper-server/src/services/: agent_service.rs  apikey_service.rs  backend_service.rs  connection_service.rs  conversation_service.rs  deployment_service.rs  feedback_service.rs  inference_service.rs  knowledge_service.rs  llm_caller.rs  mcp_connection_service.rs  memory_service.rs  mod.rs  model_service.rs  oauth_provider_service.rs  quota_service.rs  routing.rs  run_service.rs  secret_service.rs  snippet_service.rs  training_service.rs  user_service.rs
casper-server/src/ws/: handler.rs  mod.rs  protocol.rs  registry.rs
config/: agent-backend.yaml  casper-server.docker.yaml  casper-server.test.yaml  casper-server.yaml
crates/casper-agent/: Cargo.toml
crates/casper-agent/src/: actor.rs  engine.rs  lib.rs  reaper.rs  stream_event.rs
crates/casper-agent/src/engine/: helpers.rs  llm.rs  mod.rs
crates/casper-agent/src/mcp/: client.rs  oauth.rs
crates/casper-agent/src/prompt/: assembler.rs  history.rs  mod.rs  types.rs
crates/casper-agent/src/tools/: ask_user.rs  delegate.rs  knowledge_search.rs  mcp.rs  mod.rs  update_memory.rs  web_fetch.rs  web_search.rs
crates/casper-auth/: Cargo.toml
crates/casper-auth/src/: lib.rs  revocation.rs  signer.rs
crates/casper-base/: Cargo.toml
crates/casper-base/src/: context.rs  db.rs  error.rs  jwt.rs  lib.rs  scope.rs  types.rs  vault.rs
crates/casper-base/src/auth/: mod.rs  revocation.rs  signer.rs
crates/casper-base/src/observe/: audit.rs  metrics.rs  mod.rs
crates/casper-catalog/: Cargo.toml
crates/casper-catalog/src/: caller.rs  lib.rs  routing.rs
crates/casper-catalog/src/proxy/: anthropic.rs  dispatch.rs  mod.rs  openai.rs
crates/casper-db/: Cargo.toml
crates/casper-db/src/: lib.rs  pool.rs
crates/casper-knowledge/: Cargo.toml
crates/casper-knowledge/src/: lib.rs
crates/casper-llm/: Cargo.toml
crates/casper-llm/src/: lib.rs  mock.rs  provider.rs  types.rs
crates/casper-llm/src/proxy/: anthropic.rs  local.rs  mod.rs  openai.rs
crates/casper-mcp/: Cargo.toml
crates/casper-mcp/src/: client.rs  lib.rs  oauth.rs  types.rs
crates/casper-observe/: Cargo.toml
crates/casper-observe/src/: lib.rs  metrics.rs  usage.rs
crates/casper-proxy/: Cargo.toml
crates/casper-proxy/src/: anthropic.rs  dispatch.rs  lib.rs  openai.rs  types.rs
crates/casper-vault/: Cargo.toml
crates/casper-vault/src/: lib.rs  vault.rs
crates/casper-wire/: Cargo.toml
crates/casper-wire/src/: lib.rs
infra/: Caddyfile  docker-compose.prod.yml  main.bicep
migrations/: 0001_platform.sql  0002_tenant.sql  0003_agent_backends.sql  0004_deployment_fallback.sql  0005_user_connections.sql  0006_mcp_oauth.sql  0007_mcp_connections.sql
scripts/: pre-commit
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: admin.spec.ts  agent-backends.spec.ts  api-paths.spec.ts
web/src/: App.tsx  index.css
web/src/components/: Layout.tsx  ProtectedRoute.tsx
web/src/components/chat/: ChatPanel.tsx  index.ts  types.ts
web/src/lib/: api.ts  auth.ts  sse.ts
web/src/pages/: AgentBuilderPage.tsx  AgentListPage.tsx  ApiKeyListPage.tsx  AuditPage.tsx  CatalogPage.tsx  ConnectionsPage.tsx  ConversationListPage.tsx  DashboardPage.tsx  DeploymentListPage.tsx  KnowledgePage.tsx  LoginPage.tsx  MemoryPage.tsx  PlaygroundPage.tsx  UsagePage.tsx
web/src/pages/admin/: BackendsPage.tsx  ModelsPage.tsx  QuotasPage.tsx  SecretsPage.tsx  TenantsPage.tsx  UsersPage.tsx
web/src/pages/components/: PromptStackEditor.tsx  ToolsEditor.tsx
web/src/types/: index.ts
web/test-results/: .last-run.json
web/test-results/api-paths-API-path-integri-572dd-quests-use-correct-prefixes-chromium/: error-context.md
web/test-results/api-paths-API-path-integri-ac248-double-api-v1-api-v1-prefix-chromium/: error-context.md
