[workspace]
resolver = "3"
members = [
    "crates/casper-base",
    "crates/casper-db",
    "crates/casper-auth",
    "crates/casper-vault",
    "crates/casper-observe",
    "crates/casper-catalog",
    "crates/casper-proxy",
    "crates/casper-mcp",
    "crates/casper-agent",
    "casper-server",
    "casper-cli",
    "crates/casper-wire",
    "casper-agent-backend",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Proprietary"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "bigdecimal"] }

# Auth / crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
jsonwebtoken = "9"
sha2 = "0.10"
rand = "0.9"
aes-gcm = "0.10"
hkdf = "0.12"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# Concurrent state
dashmap = "6"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"

# UUIDs
uuid = { version = "1", features = ["v7", "serde"] }

# Time
time = { version = "0.3", features = ["serde", "formatting"] }
chrono = { version = "0.4", features = ["serde"] }

# Config
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Testing
wiremock = "0.6"

# Error handling
thiserror = "2"

# WebSocket client
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
url = "2"

# Misc
bytes = "1"
futures = "0.3"
async-trait = "0.1"
dirs = "6"

# Workspace crates
casper-base = { path = "crates/casper-base" }
casper-db = { path = "crates/casper-db" }
casper-auth = { path = "crates/casper-auth" }
casper-vault = { path = "crates/casper-vault" }
casper-observe = { path = "crates/casper-observe" }
casper-catalog = { path = "crates/casper-catalog" }
casper-proxy = { path = "crates/casper-proxy" }
casper-mcp = { path = "crates/casper-mcp" }
casper-agent = { path = "crates/casper-agent" }
casper-wire = { path = "crates/casper-wire" }
