[package]
name = "casper-agent-backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "casper-agent-backend"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
casper-wire = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
