[package]
name = "casper-agent"
version.workspace = true
edition.workspace = true

[dependencies]
casper-base = { workspace = true }
casper-db = { workspace = true }
casper-catalog = { workspace = true }
casper-proxy = { workspace = true }
casper-knowledge = { workspace = true }
casper-mcp = { workspace = true }
casper-observe = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
