[package]
name = "casper-agent"
version.workspace = true
edition.workspace = true

[dependencies]
casper-base = { workspace = true }
casper-catalog = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10"
time = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
