[package]
name = "casper-auth"
version.workspace = true
edition.workspace = true

[dependencies]
casper-base = { workspace = true }
ed25519-dalek = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
time = { workspace = true }
