[package]
name = "casper-auth"
version.workspace = true
edition.workspace = true

[dependencies]
casper-base = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
jsonwebtoken = { workspace = true }
sqlx = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
ring = "0.17"
