[package]
name = "casper-base"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
axum = { workspace = true }
ed25519-dalek = { workspace = true }
jsonwebtoken = { workspace = true }
time = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rand = { workspace = true }
ring = "0.17"
