[package]
name = "casper-base"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
axum = { workspace = true }
ed25519-dalek = { workspace = true }
jsonwebtoken = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
prometheus = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rand = { workspace = true }
ring = "0.17"
