[package]
name = "casper-knowledge"
version.workspace = true
edition.workspace = true

[dependencies]
casper-base = { workspace = true }
casper-db = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
