[package]
name = "casper-llm"
version.workspace = true
edition.workspace = true

[dependencies]
casper-base = { workspace = true }
casper-wire = { path = "../casper-wire" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
