[package]
name = "casper-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
casper-base = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
