[package]
name = "casper-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
casper-base = { workspace = true }
casper-catalog = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
